--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 a.out
+*.o
+.deps/
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.h
+config.h.in
+config.h.in~
+config.log
+config.status
+config.sub
+configure
+depcomp
+if_conversion_prog
+install-sh
+libtool
+ltmain.sh
+missing
+partitioning_prog
+stamp-h1
+struct_to_local_vars
