--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,6 @@ AM_LDFLAGS = $(LLVM_LDFLAGS)
 LDADD = libclangall.a $(LLVM_LIBS) $(LLVM_SYSLIBS)
 common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h
 
-bin_PROGRAMS = partitioning_prog if_conversion_prog struct_to_local_vars
+bin_PROGRAMS = partitioning_prog if_conversion_prog
 partitioning_prog_SOURCES = $(common_source) partitioning_handler.cc  partitioning_prog.cc partitioning_handler.h
 if_conversion_prog_SOURCES = $(common_source) if_conversion_prog.cc if_conversion_handler.cc if_conversion_handler.h state_var_decl_handler.h state_var_decl_handler.cc packet_decl_handler.h packet_decl_handler.cc run_pass.h
-struct_to_local_vars_SOURCES = $(common_source) struct_to_local_vars.cc
