Move some boilerplate to a higher-order function
Finally found an excuse to use std::bind :)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 AM_CPPFLAGS = -isystem /usr/lib/llvm-3.5/include/
 AM_LDFLAGS = $(LLVM_LDFLAGS)
 LDADD = libclangall.a $(LLVM_LIBS) $(LLVM_SYSLIBS)
-common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h state_var_decl_handler.h state_var_decl_handler.cc packet_decl_creator.h packet_decl_creator.cc run_pass.h func_transform_handler.h func_transform_handler.cc packet_variable_census.cc packet_variable_census.h unique_var_generator.h unique_var_generator.cc func_decl_pass_through.h func_decl_pass_through.cc single_pass.cc single_pass.h echo_handler.h
+common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h state_var_decl_handler.h state_var_decl_handler.cc packet_decl_creator.h packet_decl_creator.cc run_pass.h func_transform_handler.h func_transform_handler.cc packet_variable_census.cc packet_variable_census.h unique_var_generator.h unique_var_generator.cc func_decl_pass_through.h func_decl_pass_through.cc single_pass.cc single_pass.h echo_handler.h pkt_func_transform.h pkt_func_transform.cc
 
 bin_PROGRAMS = partitioner if_converter expr_flattener strength_reducer expr_propagater echo
 
