--- a/Makefile.am
+++ b/Makefile.am
@@ -4,9 +4,8 @@ AM_LDFLAGS = $(LLVM_LDFLAGS)
 LDADD = libclangall.a $(LLVM_LIBS) $(LLVM_SYSLIBS)
 common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h packet_variable_census.cc packet_variable_census.h unique_var_generator.h unique_var_generator.cc single_pass.h pkt_func_transform.h pkt_func_transform.cc graph.h
 
-bin_PROGRAMS = partitioner if_converter expr_flattener strength_reducer expr_propagater echo stateful_flanks ssa dep_graph
+bin_PROGRAMS = if_converter expr_flattener strength_reducer expr_propagater echo stateful_flanks ssa dep_graph
 
-partitioner_SOURCES = $(common_source) partitioning_handler.cc  partitioner.cc partitioning_handler.h
 if_converter_SOURCES = $(common_source) if_converter.cc if_conversion_handler.cc if_conversion_handler.h
 expr_flattener_SOURCES = $(common_source) expr_flattener.cc expr_flattener_handler.cc expr_flattener_handler.h
 strength_reducer_SOURCES = $(common_source) strength_reducer.cc
