--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 AM_CPPFLAGS = -isystem /usr/lib/llvm-3.5/include/
 AM_LDFLAGS = $(LLVM_LDFLAGS)
-# There are some strange circular deps within clang
+# There are some strange circular deps within clang requiring us to list libraries twice
 # https://github.com/eliben/llvm-clang-samples/blob/master/Makefile#L71
 LDADD = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
 				-lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
