Refactor banzai code generation files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangE
 				-lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
         -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMSupport -lz -lpthread -ltinfo -ldl
 
-common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h unique_identifiers.h unique_identifiers.cc pkt_func_transform.h pkt_func_transform.cc graph.h strength_reducer.cc expr_flattener_handler.cc expr_flattener_handler.h expr_prop.cc stateful_flanks.cc ssa.cc partitioning.cc if_conversion_handler.cc if_conversion_handler.h ssa.h partitioning.h stateful_flanks.h expr_prop.h strength_reducer.h banzai_code_generator.h banzai_code_generator.cc util.cc
+common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h unique_identifiers.h unique_identifiers.cc pkt_func_transform.h pkt_func_transform.cc graph.h strength_reducer.cc expr_flattener_handler.cc expr_flattener_handler.h expr_prop.cc stateful_flanks.cc ssa.cc partitioning.cc if_conversion_handler.cc if_conversion_handler.h ssa.h partitioning.h stateful_flanks.h expr_prop.h strength_reducer.h banzai_code_generator.h banzai_code_generator.cc util.cc util.h banzai_atom.h banzai_atom.cc
 
 bin_PROGRAMS = domino banzai_code_gen_test
 
