Switch over to new safer assert_exception

--- a/configure.ac
+++ b/configure.ac
@@ -28,7 +28,7 @@ if test "$GPLUSPLUS" = "no"; then
 fi
 AC_DEFINE_UNQUOTED([GPLUSPLUS], ["$GPLUSPLUS"], [path to g++])
 
-AC_CHECK_HEADERS([algorithm array cassert cmath queue \
+AC_CHECK_HEADERS([algorithm array cmath queue \
 cstdio string sys/stat.h sys/types.h ctime tuple unistd.h unordered_map \
 utility vector], [], [AC_MSG_ERROR([Missing header file])])
 
