Add dummy test to tests folder

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,9 @@ dep_graph
 rewritersample
 domino
 banzai_code_gen_test
-third_party/libmahimahi.a
+*.a
+*.so
+test-driver
+echo_test
+*.log
+*.trs
