--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,7 @@ AC_TYPE_UINT64_T
 AC_LANG_POP(C++)
 
 AC_CONFIG_FILES([Makefile
-                 third_party/Makefile])
+                 third_party/Makefile
+                 tests/Makefile])
 
 AC_OUTPUT
