--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,9 @@ CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangE
 
 common_source = clang_utility_functions.cc  expr_functions.cc clang_utility_functions.h expr_functions.h unique_identifiers.h unique_identifiers.cc pkt_func_transform.h pkt_func_transform.cc graph.h strength_reducer.cc expr_flattener_handler.cc expr_flattener_handler.h expr_prop.cc stateful_flanks.cc ssa.cc partitioning.cc if_conversion_handler.cc if_conversion_handler.h ssa.h partitioning.h stateful_flanks.h expr_prop.h strength_reducer.h banzai_code_generator.h banzai_code_generator.cc util.cc util.h banzai_atom.h banzai_atom.cc assert_exception.h
 
+noinst_LIBRARIES = libdomino.a
 bin_PROGRAMS = domino
 
-domino_SOURCES = $(common_source) domino.cc
-domino_LDADD = $(srcdir)/third_party/libmahimahi.a $(CLANG_LLVM_LIBS)
+domino_SOURCES = domino.cc
+domino_LDADD = $(CLANG_LLVM_LIBS) libdomino.a $(srcdir)/third_party/libmahimahi.a
+libdomino_a_SOURCES = $(common_source)
