--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,14 @@
 AM_CPPFLAGS =  -isystem /usr/lib/llvm-3.5/include
 AM_CXXFLAGS = $(PICKY_CXXFLAGS) -isystem $(srcdir)/../third_party/ -pthread
-LDADD = $(srcdir)/../third_party/libgtest.a
+AM_LDFLAGS = $(LLVM_LDFLAGS)
+
+# There are some strange circular deps within clang requiring us to list libraries twice
+# https://github.com/eliben/llvm-clang-samples/blob/master/Makefile#L71
+CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
+				-lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
+        -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMSupport -lz -lpthread -ltinfo -ldl
+
+LDADD = $(CLANG_LLVM_LIBS) $(srcdir)/../third_party/libgtest.a $(srcdir)/../libdomino.a $(srcdir)/../third_party/libmahimahi.a
 
 # Define unit tests
 TESTS = echo_test
