--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.9
-    - libllvm-dev
+    - llvm-dev
     - libclang-3.4-dev
 
-script: "./autogen.sh && ./configure CXX='g++-4.9' && make"
+script: "git clone git@github.com:anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++-4.9'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++-4.9' && make"
