--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.5
     packages:
     - g++-4.9
     - llvm-dev
-    - libclang-3.4-dev
+    - libclang-3.5-dev
 
 script: "git clone git@github.com:anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++-4.9'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++-4.9' && make"
