--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.5
     packages:
     - g++-4.9
     - llvm-dev
-    - libclang-3.5-dev
+
+before_script:
+  - curl -sSL http://llvm.org/apt/llvm-snapshot.gpg.key | sudo -E apt-key add -
+  - sudo -E add-apt-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main'
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq libclang-3.5-dev
 
 script: "git clone git@github.com:anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++-4.9'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++-4.9' && make"
