More renames from banzai to pisa

--- a/configure.ac
+++ b/configure.ac
@@ -16,7 +16,7 @@ AC_SUBST([PICKY_CXXFLAGS])
 # Checks for header files.
 AC_LANG_PUSH(C++)
 
-# Search for g++, because we shell out to g++ when generating banzai code
+# Search for g++, because we shell out to g++ when generating pisa code
 AC_ARG_VAR([GPLUSPLUS], [path to g++])
 AC_PATH_PROGS([GPLUSPLUS], [g++], [no], [$PATH$PATH_SEPARATOR/sbin$PATH_SEPARATOR/usr/sbin$PATH_SEPARATOR/bin$PATH_SEPARATOR/usr/bin])
 if test "$GPLUSPLUS" = "no"; then
@@ -28,9 +28,9 @@ AC_CHECK_HEADERS([algorithm array cmath queue \
 cstdio string sys/stat.h sys/types.h ctime tuple unistd.h unordered_map \
 utility vector], [], [AC_MSG_ERROR([Missing header file])])
 
-# Check for banzai headers
+# Check for pisa headers
 AC_CHECK_HEADERS([pipeline.h stage.h field_container.h atom.h packet.h packet_latches.h],
-                 [], [AC_MSG_ERROR([Missing header files for banzai target machine])])
+                 [], [AC_MSG_ERROR([Missing header files for pisa target machine])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
