--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ echo_test
 if_converter_test
 strength_reducer_test
 expr_flattener_test
-tests/scc_test
-tests/complicated_scc_test
+scc_test
+complicated_scc_test
+graph_dot_constructor
