--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ before_script:
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq libclang-3.5-dev
   - sudo apt-get install -y -qq llvm-3.5-dev
+  - sudo apt-get install -y -qq libgraphviz-dev
 
 script: "git clone git@github.com:anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++-4.9'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++-4.9' && make && make check"
