Some Mac-related code fixes to ensure compilation
1. fnodefaultinline doesn't work on Mac

2. Need to #define some macros on Mac OS X
http://stackoverflow.com/questions/986426/what-do-stdc-limit-macros-and-stdc-constant-macros-mean

3. Should be numeric, not algorithm

4. g++ on Mac complains of undefined reference. Explicitly initialize outside declaration.

--- a/configure.ac
+++ b/configure.ac
@@ -9,8 +9,8 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 
 # Add picky CXXFLAGS
-CPPFLAGS="-std=c++14 -pthread"
-PICKY_CXXFLAGS="-pedantic -Wconversion -Wsign-conversion -Wall -Wextra -Weffc++ -Werror -fno-default-inline"
+CPPFLAGS="-std=c++14 -pthread -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS"
+PICKY_CXXFLAGS="-pedantic -Wconversion -Wsign-conversion -Wall -Wextra -Weffc++ -Werror"
 AC_SUBST([PICKY_CXXFLAGS])
 
 # Checks for header files.
