With -pthread gone, we need -lpthread during linking.
(Note that -lpthread is required AFTER the gtest libraries because
gtest depends on -lpthread and the linker goes from left to right
http://stackoverflow.com/a/11894098
http://eli.thegreenplace.net/2013/07/09/library-order-in-static-linking)
This is why we need to repeat -lpthread even though it's part of CLANG_LLVM_LIBS

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,7 @@ CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangE
                   -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
                   -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMSupport -lz -lpthread -ltermcap -ldl
 
-LDADD = $(CLANG_LLVM_LIBS) $(srcdir)/../third_party/libgtest.a $(srcdir)/../libdomino.a $(srcdir)/../third_party/libmahimahi.a
+LDADD = $(CLANG_LLVM_LIBS) $(srcdir)/../third_party/libgtest.a $(srcdir)/../libdomino.a $(srcdir)/../third_party/libmahimahi.a -lpthread
 
 # Define unit tests
 TESTS = echo_test if_converter_test expr_flattener_test scc_test complicated_scc_test
