--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ missing
 stamp-h1
 *.Tpo
 domino
+domino_to_chipmunk
 *.a
 *.so
 test-driver
@@ -36,4 +37,3 @@ complicated_scc_test
 graph_dot_constructor
 __pycache__
 *.spec
-domino_to_p4
