--- a/Makefile.am
+++ b/Makefile.am
@@ -10,10 +10,10 @@ CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangE
                   -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
                   -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMSupport -lz -lpthread -ltermcap -ldl
 
-common_source = clang_utility_functions.cc  clang_utility_functions.h unique_identifiers.h unique_identifiers.cc pkt_func_transform.h pkt_func_transform.cc graph.h expr_flattener_handler.cc expr_flattener_handler.h expr_prop.cc stateful_flanks.cc ssa.cc partitioning.cc if_conversion_handler.cc if_conversion_handler.h ssa.h partitioning.h stateful_flanks.h expr_prop.h util.cc util.h assert_exception.h desugar_compound_assignment.h desugar_compound_assignment.cc int_type_checker.h algebraic_simplifier.cc algebraic_simplifier.h array_validator.h redundancy_remover.cc redundancy_remover.h sketch_backend.cc sketch_backend.h csi.cc csi.h cse.cc cse.h gen_used_fields.cc gen_used_fields.h validator.h bool_to_int.h ast_visitor.cc ast_visitor.h chipmunk_code_generator.cc chipmunk_code_generator.h chipmunk_deadcode_generator.cc chipmunk_deadcode_generator.h chipmunk_anotherDomino_generator.cc chipmunk_anotherDomino_generator.h
+common_source = clang_utility_functions.cc  clang_utility_functions.h unique_identifiers.h unique_identifiers.cc pkt_func_transform.h pkt_func_transform.cc graph.h expr_flattener_handler.cc expr_flattener_handler.h expr_prop.cc stateful_flanks.cc ssa.cc partitioning.cc if_conversion_handler.cc if_conversion_handler.h ssa.h partitioning.h stateful_flanks.h expr_prop.h util.cc util.h assert_exception.h desugar_compound_assignment.h desugar_compound_assignment.cc int_type_checker.h algebraic_simplifier.cc algebraic_simplifier.h array_validator.h redundancy_remover.cc redundancy_remover.h sketch_backend.cc sketch_backend.h csi.cc csi.h cse.cc cse.h gen_used_fields.cc gen_used_fields.h validator.h bool_to_int.h ast_visitor.cc ast_visitor.h chipmunk_code_generator.cc chipmunk_code_generator.h chipmunk_deadcode_generator.cc chipmunk_deadcode_generator.h chipmunk_anotherDomino_generator.cc chipmunk_anotherDomino_generator.h chipmunk_remove_null_stmt.h chipmunk_remove_null_stmt.cc
 
 noinst_LIBRARIES = libdomino.a
-bin_PROGRAMS = domino domino_to_chipmunk domino_to_Deaddomino domino_to_another_domino
+bin_PROGRAMS = domino domino_to_chipmunk domino_to_Deaddomino domino_to_another_domino domino_remove_null_stmt
 
 libdomino_a_SOURCES = $(common_source)
 
@@ -32,3 +32,7 @@ domino_to_Deaddomino_LDADD = $(CLANG_LLVM_LIBS) libdomino.a $(srcdir)/third_part
 domino_to_another_domino_CXXFLAGS = $(PICKY_CXXFLAGS) -fno-rtti
 domino_to_another_domino_SOURCES = domino_to_another_domino.cc
 domino_to_another_domino_LDADD = $(CLANG_LLVM_LIBS) libdomino.a $(srcdir)/third_party/libmahimahi.a
+
+domino_remove_null_stmt_CXXFLAGS = $(PICKY_CXXFLAGS) -fno-rtti
+domino_remove_null_stmt_SOURCES = domino_remove_null_stmt.cc
+domino_remove_null_stmt_LDADD = $(CLANG_LLVM_LIBS) libdomino.a $(srcdir)/third_party/libmahimahi.a
