Compile w/ c++17 and update clang+llvm dependency version.  (#2)
* Compile with c++17

* tuple and std::apply are part of c++ standard library from c++17

* Add missing LLVM libs.

* Update README regarding clang+llvm version.

* Add few more LLVM libs to dependency.

* Add missing LLVM libraries to tests deps.

* The order of LLVM libs matter on Ubuntu w/ G++

* No longer necessary to consider dual ABI, with c++17 & G++-7

* Update g++ version in README.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,7 +6,7 @@ AM_LDFLAGS = -L $(CLANG_DEV_LIBS)/lib
 # https://github.com/eliben/llvm-clang-samples/blob/master/Makefile#L71
 CLANG_LLVM_LIBS = -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
                   -lclangAST -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangSerialization\
-                  -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMSupport -lz -lpthread -ltermcap -ldl
+                  -lLLVMCore -lLLVMOption  -lLLVMMCParser -lLLVMBitReader  -lLLVMMC -lLLVMDemangle -lLLVMProfileData -lLLVMSupport -lLLVMBinaryFormat -lz -lpthread -ltermcap -ldl
 
 LDADD = $(CLANG_LLVM_LIBS) $(srcdir)/../third_party/libgtest.a $(srcdir)/../libdomino.a $(srcdir)/../third_party/libmahimahi.a -lpthread
 
