--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 
 # Add picky CXXFLAGS
-CPPFLAGS="-std=c++14 -pthread -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -D_GLIBCXX_USE_CXX11_ABI=0"
+CPPFLAGS="-std=c++17 -pthread -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS"
 PICKY_CXXFLAGS="-pedantic -Wconversion -Wsign-conversion -Wall -Wextra -Weffc++ -Werror"
 AC_SUBST([PICKY_CXXFLAGS])
 
