Remove unused .cc and .h files, and fix typos. (#5)
* Ignore vscode directory.

* Remove unused file. Can't find this files dependency domino_to_test_code_gen.h

* Remove unused file, this file is never accesed from Makefile.

* More recent version of this file is in chipmunk_experiments.

* Fix ifndef string.

* compile_with_chipmunk.py doesn't use domino_to_dead_domino, remove it.

* Fix typo.

* Remove domino_to_another_domino and domino_remove_null_stmt

* Remove unused chipmunk related files.

* Update ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ stamp-h1
 *.Tpo
 domino
 domino_to_chipmunk
-domino_to_dead_domino
 canonicalizer
 *.a
 *.so
@@ -40,7 +39,5 @@ graph_dot_constructor
 __pycache__
 *.spec
 compile_commands.json
-domino_remove_null_stmt
-domino_to_another_domino
-domino_to_rename_domino
 grouper
+.vscode/
